[package]
name = "philopp"
version = "0.1.0"
edition = "2021"
publish = ["crates-io"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.5"
uart_16550 = "0.2.18"
volatile = "0.2.6"
x86_64 = "0.14.10"


# the profile used for `cargo build`
[profile.dev]
# disable stack unwinding on panic
# panic = "abort"

# the profile used for `cargo build --release`
[profile.release]
# disbale stack unwinding on pnaic
# panic = "abort"

[package.metadata.bootimage]
test-args = [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
	"-display", "none"
]
# (0x10 << 1) | 1
test-success-exit-code = 33
# in seconds
test-timeout = 5

# [[test]]
# name = "should_panic"
# harness = false
